[package]
name = "pretty-logging"
description = "A minimal and pretty logger for the log crate."
edition = "2024"
version = "0.1.0"
authors = ["Rafael Bradley"]
license = "MIT"
repository = "https://github.com/Nekidev/pretty-logging"

[dependencies]
colored = "3.0.0"
log = "0.4.27"
time = { version = "0.3.42", features = ["formatting", "local-offset", "macros"] }
